--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,64 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}Upper base{% endblock %}</title>
+  <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
+
 </head>
 <body>
-  <main>
-    {% block content %}
-    {% endblock %}
-  </main>
-</body>
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+
+                <a class="navbar-brand" href="/">Willhelm International</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+              <ul class="nav navbar-nav">
+                <li><a href="{% url 'home' %}">Home</a></li>
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                  {% if user.is_authenticated %}
+                      {% if user.is_doctor %}
+                      <li><a href="{% url 'doctor_view_url' %}">Doctor View</a></li>{% endif %}
+                      {% if user.is_patient %}
+                      <li><a href="{% url 'patient_view_url' %}">Patient View</a></li>
+                      {% endif %}
+                      <li><a href="{% url 'logout' %}">Logout</a></li>
+                  {% else %}
+                      <li><a href="{% url 'signup' %}">SignUp</a></li>
+                      <li><a href="{% url 'login' %}">Login</a></li>
+                  {% endif %}
+              </ul>
+            </div>
+        </div>
+    </nav>
+
+{#        <div class = "container">#}
+{#            <% if(error && error.length > 0){ %>#}
+{#                <div class="alert alert-danger" role = "alert">#}
+{#                     <%= error%>#}
+{#                </div>#}
+{#            <% } %>#}
+{#            <% if(success && success.length > 0){ %>#}
+{#                <div class="alert alert-success" role = "alert">#}
+{#                     <%= success%>#}
+{#                </div>#}
+{#            <% } %>#}
+        </div>
+        <div class="container">
+            {% block content %}
+            {% endblock %}
+        </div>
+        <!-- jQuery CDN -->
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
+
+        <!-- Bootstrap JS CDN -->
+            <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    </body>
 </html>
