--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -32,17 +32,17 @@
                         <div class = "form-group">
                             <input class = "form-control" type = "password" name = "password" placeholder = "password">
                         </div>
-                            <label class="control-label" for="radio">Status:</label>
-                        <div class="float-left">
-                            <div class="form-check form-check-inline">
-                              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                              <label class="form-check-label" for="inlineRadio1">1</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                              <label class="form-check-label" for="inlineRadio2">2</label>
-                            </div>
-                        </div>
+{#                            <label class="control-label" for="radio">Status:</label>#}
+{#                        <div class="float-left">#}
+{#                            <div class="form-check form-check-inline">#}
+{#                              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">#}
+{#                              <label class="form-check-label" for="inlineRadio1">doctor</label>#}
+{#                            </div>#}
+{#                            <div class="form-check form-check-inline">#}
+{#                              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">#}
+{#                              <label class="form-check-label" for="inlineRadio2">patient</label>#}
+{#                            </div>#}
+{#                        </div>#}
                         <div class = "form-group">
                             <button type="submit" class = "btn btn-lg btn-primary btn-block">Login</button>
                         </div>
