--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -3,10 +3,39 @@
 {% block title %}Sign Up{% endblock %}
 
 {% block content %}
-<h2>Sign up</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Sign up</button>
-</form>
+<div class = "container">
+        <div class = "row">
+            <h1 style = "text-align:center">Signup</h1>
+            <div style = "width:30%; margin: 25px auto;">
+                <div id="signup">
+{#                    <form class="form-horizontal" method="post">#}
+{#                      {% csrf_token %}#}
+{#                      {% for field in form %}#}
+{#                      <div class = "form-group">#}
+{#                        <input class = "form-control" type = "text" name = '{{ field.label_tag }}' placeholder='{{ field.label_tag }}'>#}
+{#                      </div>#}
+{#                      <p>{{ field.label_tag }}<br>#}
+{#                        {{ field }}#}
+{#                        {% if field.help_text %}#}
+{#                          <small style="color: grey">{{ field.help_text }}</small>#}
+{#                        {% endif %}#}
+{#                        {% for error in field.errors %}#}
+{#                          <p style="color: red">{{ error }}</p>#}
+{#                        {% endfor %}#}
+{#                      </p>#}
+{#                      {% endfor %}#}
+{#                        {{ form.as_p }}#}
+{#                      <button type="submit">Sign up</button>#}
+{#                    </form>#}
+                      <form method="post" novalidate>
+                        {% csrf_token %}
+                        {% include 'includes/bs_form.html' with form=form %}
+                      <button type="submit" class = "btn btn-lg btn-primary btn-block">Signup</button>
+                      </form>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
+
+
